add lists transaction

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -2,12 +2,17 @@
 $--black: #000000;
 $--white: #ffffff;
 $--grey: #acacac;
+$--light-blue: #d8d4ff;
+$--blue: #1935cf;
+$--salad: #49c800;
 // typography
 
 // fonts
 $--font-base: 'Roboto', serif;
 $--font-size-small: 12px;
 $--font-size-base: 14px;
+$--font-size-default: 16px;
+$--font-size-small-subtitle: 20px;
 $--font-size-title: 28px;
 $--font-size-subtitle: 24px;
 
