--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -6,12 +6,11 @@ $--light-blue: #d8d4ff;
 $--blue: #1935cf;
 $--salad: #49c800;
 // typography
-
+$--small-border-radius: 3px;
 // fonts
 $--font-base: 'Roboto', serif;
 $--font-size-small: 12px;
 $--font-size-base: 14px;
-$--font-size-default: 16px;
 $--font-size-small-subtitle: 20px;
 $--font-size-title: 28px;
 $--font-size-subtitle: 24px;
