--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -11,6 +11,7 @@ $--small-border-radius: 3px;
 $--font-base: 'Roboto', serif;
 $--font-size-small: 12px;
 $--font-size-base: 14px;
+$--font-size-medium: 16px;
 $--font-size-small-subtitle: 20px;
 $--font-size-title: 28px;
 $--font-size-subtitle: 24px;
