system share and clipbord copy

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -5,6 +5,7 @@ $--grey: #acacac;
 $--light-blue: #d8d4ff;
 $--blue: #1935cf;
 $--salad: #49c800;
+$--red: #ff1100;
 // typography
 $--small-border-radius: 3px;
 // fonts
