--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-y: auto;
+}
+
 body {
   font-family: $--font-base;
   font-weight: $--font-weight-regular;
