fix mobile height

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -10,6 +10,10 @@ html {
   overflow-y: auto;
 }
 
+.v-application--wrap {
+  min-height: 0;
+}
+
 body {
   font-family: $--font-base;
   font-weight: $--font-weight-regular;
