fix width content

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -25,6 +25,7 @@ $--font-weight-regular: 400;
 $--font-weight-light: 300;
 $--font-weight-extra-light: 200;
 
+$--max-content-size: 1920px;
 $--bp-tablet: 1024px;
 $--bp-phone: 480px;
 
