--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -29,9 +29,17 @@ $--max-content-size: 1920px;
 $--bp-tablet: 1024px;
 $--bp-phone: 480px;
 
+$--navigation-drawer-desktop-width: 70px;
+$--toolbar-desktop-height: 56px;
+
 // transition duration
 $--transition-duration: 0.3s;
 
 // z-indexes
 $--z-index-negative: -10;
 $--z-index-high: 1000;
+
+:root {
+  --toolbar-desktop-height: $--toolbar-desktop-height;
+  --navigation-drawer-desktop-width: $--navigation-drawer-desktop-width;
+}
