rework invoice form

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -39,4 +39,5 @@ $--z-index-high: 1000;
 :root {
   --navigation-drawer-mobile-height: 57px;
   --navigation-drawer-desktop-width: 70px;
+  --max-content-size: 1920px;
 }
