--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -13,6 +13,7 @@ $--font-base: 'Roboto', serif;
 $--font-size-small: 12px;
 $--font-size-base: 14px;
 $--font-size-medium: 16px;
+$--font-size-extra-small-subtitle: 18px;
 $--font-size-small-subtitle: 20px;
 $--font-size-title: 28px;
 $--font-size-subtitle: 24px;
