--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -9,7 +9,7 @@ $--red: #ff1100;
 // typography
 $--small-border-radius: 3px;
 // fonts
-$--font-base: 'Roboto', serif;
+$--font-base: 'Nunito', serif;
 $--font-size-small: 12px;
 $--font-size-base: 14px;
 $--font-size-medium: 16px;
