--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,7 +1,7 @@
 // color
 $--black: #000000;
 $--white: #ffffff;
-$--grey: #acacac;
+$--grey: #B9B9B9;
 $--light-blue: #d8d4ff;
 $--blue: #1935cf;
 $--salad: #49c800;
@@ -15,8 +15,9 @@ $--font-size-base: 14px;
 $--font-size-medium: 16px;
 $--font-size-extra-small-subtitle: 18px;
 $--font-size-small-subtitle: 20px;
-$--font-size-title: 28px;
 $--font-size-subtitle: 24px;
+$--font-size-title: 28px;
+$--font-size-extra-title: 30px;
 
 $--font-weight-extra-bold: 800;
 $--font-weight-bold: 700;
