--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -52,3 +52,10 @@ html {
   // также можно использовать -webkit-fill-available
   min-height: calc(var(--vh, 1vh) * 100);
 }
+// Переопределим некоторые стили для vuetify
+// уберем левый отступ у вкладок на маленьких устройствах
+.v-slide-group__prev {
+  &--disabled {
+    display: none !important;
+  }
+}
