--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -5,11 +5,13 @@ $--grey: #B9B9B9;
 $--light-blue: #d8d4ff;
 $--blue: #1935cf;
 $--salad: #49c800;
-$--red: #ff1100;
+$--red: #ff0000;
+$--green: #008000;
 // typography
 $--small-border-radius: 3px;
 // fonts
 $--font-base: 'Nunito', serif;
+$--font-size-extra-small: 10px;
 $--font-size-small: 12px;
 $--font-size-base: 14px;
 $--font-size-medium: 16px;
