--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,6 +1,7 @@
 // color
 $--black: #000000;
 $--white: #ffffff;
+$--light-grey: #e5e5e5;
 $--grey: #B9B9B9;
 $--light-blue: #d8d4ff;
 $--blue: #1935cf;
