--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -3,6 +3,7 @@ $--black: #000000;
 $--white: #ffffff;
 $--light-grey: #e5e5e5;
 $--grey: #B9B9B9;
+$--dark-grey: #919191;
 $--light-blue: #d8d4ff;
 $--blue: #1935cf;
 $--salad: #49c800;
