fix: scss variables

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,7 +1,7 @@
 // color
 $--black: #000000;
 $--white: #ffffff;
-$--light-grey: #e5e5e5;
+$--light-grey: #F6F6F6;
 $--grey: #B9B9B9;
 $--dark-grey: #919191;
 $--light-blue: #d8d4ff;
