--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -6,6 +6,7 @@ $--grey: #B9B9B9;
 $--dark-grey: #919191;
 $--light-blue: #d8d4ff;
 $--blue: #1935cf;
+$--purple: #6144E5;
 $--salad: #49c800;
 $--red: #ff0000;
 $--green: #008000;
