--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -18,6 +18,7 @@ $--font-size-extra-small: 10px;
 $--font-size-small: 12px;
 $--font-size-base: 14px;
 $--font-size-medium: 16px;
+$--font-size-button: 17px;
 $--font-size-extra-small-subtitle: 18px;
 $--font-size-small-subtitle: 20px;
 $--font-size-subtitle: 24px;
