--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -2,7 +2,8 @@
 $--black: #101010;
 $--white: #ffffff;
 $--light-grey: #F6F6F6;
-$--grey: #B9B9B9;
+$--light-grey-1: #E9E9E9;
+$--grey: #b9b9b9;
 $--dark-grey: #919191;
 $--light-blue: #d8d4ff;
 $--blue: #1935cf;
