draft swap adaptiv

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -37,6 +37,7 @@ $--font-weight-extra-light: 200;
 $--max-content-size: 1280px;
 $--bp-tablet: 1280px;
 $--bp-phone: 480px;
+$--bp-small: 320px;
 
 // transition duration
 $--transition-duration: 0.3s;
