fix design swap

--- a/src/assets/scss/_media.scss
+++ b/src/assets/scss/_media.scss
@@ -29,7 +29,7 @@
 }
 
 @mixin small {
-  @media screen and (max-width: $--bp-small-phone) {
+  @media screen and (max-width: $--bp-small) {
     @content;
   }
 }
