--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -6,6 +6,7 @@ $--light-grey-1: #E9E9E9;
 $--grey: #b9b9b9;
 $--grey-1: #A4A4A4;
 $--grey-2: #B4B4B4;
+$--grey-3: #909090;
 $--dark-grey: #919191;
 $--light-blue: #d8d4ff;
 $--blue: #1935cf;
