changing the name of a variable

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -41,7 +41,7 @@ $--bp-phone: 480px;
 $--bp-small: 320px;
 
 // border-radius
-$--border-radius-8: 8px;
+$--main-border-radius: 8px;
 
 // transition duration
 $--transition-duration: 0.3s;
