--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,6 +1,6 @@
 // color
 $--black: #101010;
-$--white: #ffffff;
+$--white: #fff;
 $--light-grey: #f5f5f5;
 $--light-grey-1: #e9e9e9;
 $--grey: #b9b9b9;
