change avatars to profile backgrounds, refactor Wallet module

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -9,7 +9,7 @@
 
 // Переопределяем фон для выделенных элементов
 ::selection {
-  background: var(--color-selection);
+  background: var(--selection-color);
   color: $--black;
 }
 
