fix save background

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -12,7 +12,7 @@ $--light-blue: #d8d4ff;
 $--blue: #1935cf;
 $--purple: #6144e5;
 $--salad: #49c800;
-$--red: #ff0000;
+$--text-color-error: #f00;
 $--green: #008000;
 // fonts
 $--font-base: 'Nunito', serif;
