--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -3,11 +3,16 @@ $--black: #101010;
 $--white: #fff;
 $--light-grey: #f5f5f5;
 $--light-grey-1: #e9e9e9;
+$--light-grey-2: #f6f6f6;
+$--light-grey-3: #eaeaea;
+$--light-grey-4: #e8e8e8;
+$--light-grey-5: #eeeeee;
 $--grey: #b9b9b9;
 $--grey-1: #a4a4a4;
 $--grey-2: #b4b4b4;
 $--grey-3: #909090;
 $--dark-grey: #919191;
+$--border-grey: #d0d0d0;
 $--light-blue: #d8d4ff;
 $--blue: #1935cf;
 $--purple: #6144e5;
