layput update + transaction search

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -45,6 +45,8 @@ $--bp-tablet: 1280px;
 $--bp-phone: 480px;
 $--bp-small: 320px;
 
+$--header-height: 70px;
+
 // border-radius
 $--main-border-radius: 8px;
 
