--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -2,6 +2,8 @@
 @import 'media';
 @import '~normalize.css';
 @import 'stylesheet';
+@import '~vuetify/src/styles/styles.sass';
+@import 'theme-variable';
 
 * {
   box-sizing: border-box;
