--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -4,6 +4,7 @@ $--white: #fff;
 $--light-grey: #f5f5f5;
 $--light-grey-1: #e9e9e9;
 $--light-grey-2: #f6f6f6;
+$--light-grey-2-percent10: rgba($--light-grey-2, 0.1);
 $--light-grey-3: #eaeaea;
 $--light-grey-4: #e8e8e8;
 $--light-grey-5: #eeeeee;
@@ -54,6 +55,7 @@ $--main-border-radius: 8px;
 
 // transition duration
 $--transition-duration: 0.3s;
+$--theme-transition: 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
 
 // z-indexes
 $--z-index-negative: -10;
