--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -18,6 +18,7 @@ $--dark-grey: #919191;
 $--border-grey: #d0d0d0;
 $--light-blue: #d8d4ff;
 $--blue: #1935cf;
+$--light-blue: #2196f3;
 $--purple: #6144e5;
 $--salad: #49c800;
 $--text-color-error: #f00;
