refactoring dark theme

--- a/src/assets/scss/_theme-variable.scss
+++ b/src/assets/scss/_theme-variable.scss
@@ -12,6 +12,7 @@
   --additional-background: #{$--light-grey-2};
   --field-background: #{$--light-grey-4};
   --additional-button-background: #{$--light-grey-4};
+  --selection-text-color: #{$--black};
 }
 
 .theme--dark {
@@ -28,4 +29,5 @@
   --additional-background: #212f46;
   --field-background: #131b27;
   --additional-button-background: #212f46;
+  --selection-text-color: #{$--white};
 }
