refactoring swap button

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -53,6 +53,7 @@ $--header-height: 70px;
 
 // border-radius
 $--main-border-radius: 8px;
+$--border-radius-small: 4px;
 
 // transition duration
 $--transition-duration: 0.3s;
