--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -12,7 +12,7 @@
 // Переопределяем фон для выделенных элементов
 ::selection {
   background: var(--selection-color);
-  color: var(--selection-text-color);
+  color: $--black;
 }
 
 body {
