--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -63,6 +63,13 @@ $--theme-transition: 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
 $--z-index-negative: -10;
 $--z-index-high: 1000;
 
+// buttons
+$--button-size-small: 31px;
+$--button-size-default: 42px;
+$--button-size-large: 52px;
+
+$--button-size-fab-small: 36px;
+
 :root {
   --navigation-drawer-mobile-height: 57px;
   --navigation-drawer-desktop-width: 70px;
