--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -23,6 +23,13 @@ $--purple: #6144e5;
 $--salad: #49c800;
 $--text-color-error: #f00;
 $--green: #008000;
+
+$--dark-blue: #0f1422;
+$--dark-blue-1: #131b27;
+$--dark-blue-2: #182231;
+$--dark-blue-3: #212f46;
+$--dark-blue-4: #20222e;
+
 // fonts
 $--font-base: 'Nunito', serif;
 $--font-size-extra-small: 10px;
