--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -29,6 +29,7 @@ $--dark-blue-1: #131b27;
 $--dark-blue-2: #182231;
 $--dark-blue-3: #212f46;
 $--dark-blue-4: #20222e;
+$--dark-blue-5: #272c34;
 
 // fonts
 $--font-base: 'Nunito', serif;
@@ -60,6 +61,7 @@ $--header-height: 70px;
 // border-radius
 $--main-border-radius: 8px;
 $--border-radius-small: 4px;
+$--border-radius-large: 12px;
 
 // transition duration
 $--transition-duration: 0.3s;
