Implementation of system design and application theming

--- a/src/assets/scss/_theme-variable.scss
+++ b/src/assets/scss/_theme-variable.scss
@@ -1,18 +1,31 @@
 .theme--light {
+  //! Background
   --primary-background: #{$--white};
+  --secondary-background: #{$--light-grey-2};
+  //! Text
   --primary-text: #{$--black};
-  --main-border-color: #{$--light-grey-2};
-  --main-input-background: #{$--light-grey};
-  --main-button-background: #{$--light-grey-2};
-  --main-button-background-hover: #{$--light-grey-5};
-  --main-button-active: #{$--light-grey-4};
   --secondary-text: #{$--grey};
-  --main-icon-color: #{$--black};
-  --additional-background: #{$--light-grey-2};
-  --field-background: #{$--light-grey-4};
-  --additional-button-background: #{$--light-grey-4};
+  --disabled-text: #{$--dark-grey};
+  //! selection text color
   --selection-text-color: #{$--black};
-
+  //! Border color
+  --primary-border-color: #{$--light-grey-2};
+  --primary-border-color-hover: #{$--black};
+  --secondary-border-color: #{$--border-grey};
+  //! Text field
+  --primary-text-field-background: transparent;
+  --primary-text-field-background-disabled: #{$--light-grey-3};
+  --primary-text-field-border-color: #{$--light-grey-7};
+  --primary-text-field-border-color-hover: #{$--black};
+  --primary-text-field-border-color-error: #{$--text-color-error};
+  //! Button
+  --primary-button-background: #{$--light-grey-2};
+  --primary-button-background-hover: #{$--light-grey-5};
+  --primary-button-background-pressed: #{$--light-grey-4};
+  //! Icon
+  --icon-color-active: #{$--black};
+  --icon-color-inactive: #{$--black};
+  //! Wallets
   --wallets-item-background: #{$--light-grey-2};
   --wallets-item-background-hover: #{$--white};
   --wallets-item-border: #{$--light-grey-5};
@@ -20,22 +33,86 @@
 }
 
 .theme--dark {
+  //!Background
   --primary-background: #{$--dark-blue};
+  --secondary-background: #{$--dark-blue-4};
+  //! Text
   --primary-text: #{$--light-grey-2};
-  --main-border-color: #{$--light-grey-2-percent10};
-  --main-input-background: #{$--dark-blue-4};
-  --main-button-background: #{$--dark-blue-3};
-  --main-button-background-hover: #{$--dark-blue-2};
-  --main-button-background-active: #{ $--dark-blue-1};
   --secondary-text: #{$--grey};
-  --main-icon-color: #{$--white};
-  --additional-background: #{$--dark-blue-3};
-  --field-background: #{$--dark-blue-1};
-  --additional-button-background: #{$--dark-blue-3};
+  --disabled-text: #{$--dark-grey};
+  //! Selection text color
   --selection-text-color: #{$--white};
-  
+  //! Border color
+  --primary-border-color: #{$--dark-blue-4};
+  --primary-border-color-hover: #{$--white};
+  --secondary-border-color: #{$--light-grey-2-percent10};
+  //! Text field
+  --primary-text-field-background: transparent;
+  --primary-text-field-background-disabled: #{$--dark-blue-4};
+  --primary-text-field-border-color: #{$--dark-blue-4};
+  --primary-text-field-border-color-hover: #{$--white};
+  --primary-text-field-border-color-error: #{$--text-color-error};
+  //! Button
+  --primary-button-background: #{$--dark-blue-3};
+  --primary-button-background-hover: #{$--dark-blue-2};
+  --primary-button-background-pressed: #{$--dark-blue-1};
+  //! Icon
+  --icon-color-active: #{$--white};
+  --icon-color-inactive: #{$--dark-grey};
+  //! Wallets
   --wallets-item-background: #{$--dark-blue-4};
-  --wallets-item-background-hover:  #{$--dark-blue-3};
+  --wallets-item-background-hover: #{$--dark-blue-3};
   --wallets-item-border: #{$--dark-blue-5};
-  --wallets-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  --wallets-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+$background: (
+  'primary': var(--primary-background),
+  'secondary': var(--secondary-background)
+);
+
+$button: (
+  'primary': (
+    'enabled': var(--primary-button-background),
+    'hover': var(--primary-button-background-hover),
+    'pressed': var(--primary-button-background-pressed)
+  )
+);
+
+$text: (
+  'primary': var(--primary-text),
+  'secondary': var(--secondary-text),
+  'disabled': var(--disabled-text)
+);
+
+$border-color: (
+  'primary': var(--primary-border-color),
+  'secondary': var(--secondary-border-color)
+);
+
+$text-field: (
+  'background': (
+    'enabled': var(--primary-text-field-background),
+    'disabled': var(--primary-text-field-background-disabled)
+  ),
+  'border-color': (
+    'enabled': var(--primary-text-field-border-color),
+    'hover': var(--primary-text-field-border-color-hover),
+    'pressed': var(--main-color),
+    'error': var(--primary-text-field-border-color-error)
+  )
+);
+
+$icon: (
+  'active': var(--icon-color-active),
+  'inactive': var(--icon-color-inactive)
+);
+
+$wallets-item: (
+  'background': (
+    'enabled': var(--secondary-background),
+    'hover': var(--primary-button-background)
+  ),
+  'border': var(--wallets-item-border),
+  'box-shadow': var(--wallets-box-shadow)
+);
